--- a/css/side.css
+++ b/css/side.css
@@ -2,7 +2,7 @@
 	font-family: cool_fonts;
 	src: url('gravitat.ttf');
 }
-body{font-size: 18px; margin:50px 0px; padding:0px; background-color: #eee;}
+body{font-size: 18px; margin:50px 0px; padding:0px; background-color: #fff;}
         .container-login{
             width:1024px;
             margin:0px auto;
@@ -11,19 +11,21 @@ body{font-size: 18px; margin:50px 0px; padding:0px; background-color: #eee;}
             background-color:#fff;
             height: 400px;
             border-radius: 10px;
-            
-        }
+			border: 1px dotted #222222;
+		}
         .container-login .title{
             width:auto;
             margin:0px auto;
-            padding:5px;
-            background-color:#393939;
+            padding:15px;
+            background-color:#cecece;
             height: auto;
-            color: #fff;
+            color: #000;
             /*font-size: 18px;*/
             border-bottom: 30px solid #fff;
             font-family: 'cool_fonts' !important;
-        }
+			border-radius:15px;
+			margin-top:-20px;
+		}
         .container-login span{
             width:550px;
             margin:0px auto;
