--- a/css/side.css
+++ b/css/side.css
@@ -3,41 +3,17 @@
 	src: url('gravitat.ttf');
 }
 body{font-size: 18px; background-color: #fff;}
-@keyframes myfirst
-{
-from {background: #222222;}
-to {background: #ffffff; color:#222222;}
-}
-
-@-moz-keyframes myfirst /* Firefox */
-{
-from {background: #222222;}
-to {background: #ffffff; color:#222222;}
-}
-
-@-webkit-keyframes myfirst /* Safari and Chrome */
-{
-from {background: #222222; color:#ffffff;}
-to {color:#222222; background: #ffffff; }
-}
-
-@-o-keyframes myfirst /* Opera */
-{
-from {background: #222222;}
-to {background: #ffffff; color:#222222;}
-}
 		.container-header{
-						font-family: 'cool_fonts' !important;position:relative;   width:100%; height:100px; border-radius:5px; 
-						text-align:center; color:#fff; font-size:60px; background-color:#222222;
-						animation-iteration-count:1;
-						-webkit-animation-iteration-count:1;
+						font-family: 'arial' !important;position:relative;   width:100%; height:100px; border-radius:5px; 
+						text-align:center; color:#296297; font-size:70px; background-color:#8F9296; font-weight:bold;
+						text-transform:uppercase;
 						}
 		.container-header:hover{animation:myfirst 10s ;
                                         -moz-animation: myfirst 10s; /* Firefox */
                                         -webkit-animation: myfirst 10s; /* Safari and Chrome */
                                         -o-animation: myfirst 10s; /* Opera */}
                 .container-header-login{
-                    background-color: #222222;
+                    background-color: #5F7D97;
                     height: 50px; border-radius: 15px;
                     padding: 15px;
                     color: #fff;
@@ -57,11 +33,11 @@ to {background: #ffffff; color:#222222;}
             width:auto;
             margin:0px auto;
             padding:15px;
-            background-color:#cecece;
+            background-color:#5F7D97;
             height: auto; 
-            color: #000;
+            color: #fff;
             font-size: 25px;
-            font-family: 'cool_fonts' !important;
+            font-family: 'arial' !important;
 			border-radius:15px;
 			margin-top:-20px;
 		}
@@ -90,7 +66,7 @@ to {background: #ffffff; color:#222222;}
             text-transform: uppercase;
             font-weight: bold;
             color:#fff;
-            background-color: #393939;
+            background-color: #5F7D97;
         }
 		.login span:hover{color:#cecece}
         .login .footer-login{
@@ -134,7 +110,7 @@ to {background: #ffffff; color:#222222;}
             padding-bottom: 5px;
             padding-left: 15px;
             padding-right: 15px;
-            background-color: #222;
+            background-color: #5F7D97;
             color: #fff;
             border-radius: 10px;
             box-shadow: 3px 3px 6px #000;
@@ -152,7 +128,7 @@ to {background: #ffffff; color:#222222;}
             padding-bottom: 5px;
             padding-left: 15px;
             padding-right: 15px;
-            background-color: #222;
+            background-color: #5F7D97;
             color: #fff;
             border-radius: 10px;
             box-shadow: 3px 3px 6px #000;
@@ -171,10 +147,10 @@ to {background: #ffffff; color:#222222;}
         }
 
         .error-response{
-            border:dotted 2px red; color:red; font-size:13px; padding:3px; font-family: 'cool_fonts' !important;
+            border:dotted 2px red; color:red; font-size:13px; padding:3px; font-family: 'arial' !important;
         }
         .ok-response{
-            border:dotted 2px green; color:green; font-size:18px; font-family: 'cool_fonts' !important;
+            border:dotted 2px green; color:green; font-size:18px; font-family: 'arial' !important;
         }
         /*IN LOGIN OK
         
