--- a/css/side.css
+++ b/css/side.css
@@ -179,7 +179,7 @@ body{font-size: 18px; background-color: #fff;}
         }
         
         .container-data{
-            width: auto;
+            width: 700px;
             border-radius: 15px;
             float: left;
             margin-left: 10px;
