--- a/css/side.css
+++ b/css/side.css
@@ -6,7 +6,7 @@ body{font-size: 18px; background-color: #fff;}
 		.container-header{
 						font-family: 'arial' !important;position:relative;   width:100%; height:100px; border-radius:5px; 
 						text-align:center; color:#296297; font-size:70px; background-color:#8F9296; font-weight:bold;
-						text-transform:uppercase;
+						text-transform:uppercase; border-radius: 10px;
 						}
 		.container-header:hover{animation:myfirst 10s ;
                                         -moz-animation: myfirst 10s; /* Firefox */
