--- a/css/side.css
+++ b/css/side.css
@@ -4,7 +4,7 @@
 }
 body{font-size: 18px; background-color: #fff;}
 		.container-header{
-						font-family: 'arial' !important;position:relative;   width:100%; height:100px; border-radius:5px; 
+						font-family: 'arial' !important;position:relative;   width:100%; height:120px; border-radius:5px; 
 						text-align:center; color:#296297; font-size:70px; background-color:#8F9296; font-weight:bold;
 						text-transform:uppercase; border-radius: 10px;
 						}
@@ -156,6 +156,12 @@ body{font-size: 18px; background-color: #fff;}
         .ok-response{
             border:dotted 2px green; color:green; font-size:18px; font-family: 'arial' !important;
         }
+        #error-response{
+            border:dotted 2px red; color:red; font-size:13px; padding:3px; font-family: 'arial' !important;
+        }
+        #ok-response{
+            border:dotted 2px green; color:green; font-size:18px; font-family: 'arial' !important;
+        }
         /*IN LOGIN OK
         
         **/
@@ -164,7 +170,7 @@ body{font-size: 18px; background-color: #fff;}
             width: 300px;
             height: 100%;
             background-color: #cecece;
-            color: #222222;
+            color: #000;
             border-radius: 10px;
         }
         .menu-left ul{
@@ -177,7 +183,7 @@ body{font-size: 18px; background-color: #fff;}
         }
         .menu-left ul li ul li a{
             font-size:12px;
-            color:#fff;
+            color:#222222;
             font-family : 'arial';
             text-decoration: none;
         }
@@ -237,7 +243,7 @@ body{font-size: 18px; background-color: #fff;}
         .table .cebra0 {
             padding: 5px;
             font-size: 10px;
-            color:#222;
+            color:#222; 
             background-color: #cecece;
             font-family: 'Arial';
         }
@@ -247,5 +253,29 @@ body{font-size: 18px; background-color: #fff;}
             color:#222;
             font-family: 'Arial';
             
+        }
+        /**form_proyecto**/
+        .container-form-proyecto{
+            width: 95%;
+            /*border:#222 solid 2px;*/
+            height: 200px;
+            
+        }
+        .container-form-proyecto .span{
+            background-color: #222;
+            color:#fff;
+            padding: 5px;
+            width: 70px;
+            border-top-left-radius: 10px 20px;
+            border-top-right-radius:10px 20px;
+            display: block;
+            margin-top: -27px;
+            
+        }
+        .container-form-proyecto .form-container{
+            border:#222 solid 2px;
+            width: 100%;
+            height: 83%;
+            margin-top: 30px;
         }
         
